<?xml version="1.0"?>
<!-->
Copyright (2020-2021) Robotics Systems Lab - ETH Zurich:
Linghao Zhang, Jonas Junger, Lennart Nachtigall

This file is part of the maxon_epos_ethercat_sdk.
The maxon_epos_ethercat_sdk is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

The maxon_epos_ethercat_sdk is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with the maxon_epos_ethercat_sdk. If not, see <https://www.gnu.org/licenses/>.
<-->

<package format="2">
  <name>maxon_epos_ethercat_sdk</name>
  <version>1.0.1</version>
  <description>Maxon Ethercat implementation.</description>
  
  <license>GPLv3</license>
  <author email="jungerj@student.ethz.ch">Jonas Junger</author>
  <author email="lingzhang@ethz.ch">Linghao Zhang</author>
  <author email="nachtigall@mavt.ethz.ch">Lennart Nachtigall</author>
  <maintainer email="jungerj@student.ethz.ch">Jonas Junger</maintainer>
  <maintainer email="lingzhang@ethz.ch">Linghao Zhang</maintainer>
  <url type="website">https://github.com/leggedrobotics/maxon_epos_ethercat_sdk</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_logger</depend>
  <depend>soem_interface</depend>
  <depend>yaml-cpp</depend>
  <depend>ethercat_sdk_master</depend>
  
</package>
